// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="App"
    >
      <nav
        className="ag ah ai aj ak al am an ao"
        data-baseweb="header-navigation"
        role="navigation"
      >
        <div
          className="ak ap aq ar as at au av"
        >
          <div
            className="aw as"
          >
            <h1
              className="ae"
            >
              Next Movie
            </h1>
          </div>
        </div>
        <div
          className="ak ap aq ax as at ay az"
        />
        <div
          className="ak ap aq ar as at b0 b1"
        >
          <div
            className="aw as"
            style={
              Object {
                "width": "370px",
              }
            }
          >
            <div
              className="ag b2 ai b3 b4 ak b5"
              data-baseweb="input"
            >
              <div
                className="b6 ak b5 b7 b8 b9 ba bb bc bd be bf ag b2 ai b3 b4 bg bh"
                data-baseweb="base-input"
              >
                <div
                  className="ak bi bj"
                >
                  <svg
                    className="bk bl bm bn bo"
                    data-baseweb="icon"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      Search
                    </title>
                    <path
                      clipRule="evenodd"
                      d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
                <input
                  aria-describedby={null}
                  aria-invalid={false}
                  aria-label={null}
                  aria-labelledby={null}
                  aria-required={false}
                  autoComplete="on"
                  className="b6 bp bq br bs b5 bt bu bv bw bx by bz ag b2 ai b3 b4 c0 c1"
                  disabled={false}
                  id="typeahead"
                  inputMode="text"
                  name=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onKeyUp={[Function]}
                  pattern={null}
                  placeholder="Search a movie by title"
                  required={false}
                  rows={null}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="aw as"
          >
            <button
              className="c2 bi az bq br c3 bs c4 c5 ba bb c6 c7 c8 c9 ca cb cc cd ag ah ce aj be bf bc bd bw bx bj cf cg ch ci cj ck"
              data-baseweb="button"
              disabled={false}
              onClick={[Function]}
            >
              Sign In
            </button>
          </div>
          <div
            className="aw as"
          />
        </div>
      </nav>
      <header
        className="App-header"
      >
        <img
          alt="logo"
          className="App-logo"
          src="logo.svg"
        />
        <p>
          Edit 
          <code>
            src/App.js
          </code>
           and save to reload.
        </p>
        <a
          className="App-link"
          href="https://reactjs.org"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn React
        </a>
      </header>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots HeaderNavigation Base 1`] = `
Array [
  <div
    className=""
  >
    <nav
      className="ag ah ai aj ak al am an ao"
      data-baseweb="header-navigation"
      role="navigation"
    >
      <div
        className="ak ap aq ar as at au av"
      >
        <div
          className="aw as"
        >
          <h1
            className="ae"
          >
            Next Movie
          </h1>
        </div>
      </div>
      <div
        className="ak ap aq ax as at ay az"
      />
      <div
        className="ak ap aq ar as at b0 b1"
      >
        <div
          className="aw as"
          style={
            Object {
              "width": "370px",
            }
          }
        >
          <div
            className="ag b2 ai b3 b4 ak b5"
            data-baseweb="input"
          >
            <div
              className="b6 ak b5 b7 b8 b9 ba bb bc bd be bf ag b2 ai b3 b4 bg bh"
              data-baseweb="base-input"
            >
              <div
                className="ak bi bj"
              >
                <svg
                  className="bk bl bm bn bo"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Search
                  </title>
                  <path
                    clipRule="evenodd"
                    d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-describedby={null}
                aria-invalid={false}
                aria-label={null}
                aria-labelledby={null}
                aria-required={false}
                autoComplete="on"
                className="b6 bp bq br bs b5 bt bu bv bw bx by bz ag b2 ai b3 b4 c0 c1"
                disabled={false}
                id="typeahead"
                inputMode="text"
                name=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                pattern={null}
                placeholder="Search a movie by title"
                required={false}
                rows={null}
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="aw as"
        >
          <button
            className="c2 bi az bq br c3 bs c4 c5 ba bb c6 c7 c8 c9 ca cb cc cd ag ah ce aj be bf bc bd bw bx bj cf cg ch ci cj ck"
            data-baseweb="button"
            disabled={false}
            onClick={[Function]}
          >
            Sign In
          </button>
        </div>
        <div
          className="aw as"
        />
      </div>
    </nav>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Login Base 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;
